--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -1,6 +1,5 @@
-<p><img src="images/Images_Articles/Competition/LaToulousaineTour_ToulousaineTourLow.jpg" alt="ToulousaineTour" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px; width: 60%;" /></p>
-<!--<p><img src="images/Images_Articles/IMG_3085.JPG" alt="IMG 3085" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px;" /></p>
-<p style="font-size: 11px; text-align: center; color: #3ba4d8;"><a href="https://www.facebook.com/Gbielliphotographie/" style="text-decoration: none; font-size: 10px;">&copy;GuillaumeBielli</a></p>-->
+<p><img src="images/Images_Articles/IMG_3085.JPG" alt="IMG 3085" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px;" /></p>
+<p style="font-size: 11px; text-align: center; color: #3ba4d8;"><a href="https://www.facebook.com/Gbielliphotographie/" style="text-decoration: none; font-size: 10px;">&copy;GuillaumeBielli</a></p>
 <hr />
 <div class="btn-group d-flex justify-content-center"><a href="#Autre_section" class="btn btn-warning w-100">Vie du Club</a><a href="#Dps_section" class="btn btn-primary w-100">Dispositif Premier Secours</a> <a href="#Formation_section" class="btn btn-danger w-100">Formations Secourisme</a> <a href="#Sauvetage_section" class="btn btn-success w-100">Sauvetage Sportif</a></div>
 <hr />
@@ -18,70 +17,9 @@
 </div>
 <hr />
 <div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; background-color: white;">
-	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #337ab7;">DPS &agrave; venir :</h3>
+	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #337ab7;">Postes de Secours :</h3>
 	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenci&eacute;s uniquement - Compte EOS obligatoire) : <a href="https://eos.ffss.fr" style="text-decoration: none; color: #333399; font-weight: bold;">Cliquez-ici</a></p>
 	<p class="center" style="font-size: 12pt; color: #337ab7;">Si vous ne disposez pas de compte, faite une demande par mail : <a href="mailto:cstdps.toulouse@gmail.com" target="_blank" style="text-decoration: none;">cstdps.toulouse@gmail.com</a></p>
-	<hr />
-	<table class="table table-striped">
-		<thead>
-			<tr>
-				<th scope="col">Activit&eacute;</th>
-				<th scope="col">Lieu</th>
-				<th scope="col">Date</th>
-			</tr>
-		</thead>
-		<!-- <span style="color:rgb(0,128,0);">Renfort</span>  -->
-		<tbody>
-			<tr>
-				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
-			</tr>
-			<tr>
-				<th scope="row">Judo - Coupe de Balma 2019</th>
-				<td>Collège Jean Rostant</td>
-				<td>27-01-2019</td>
-			</tr>
-			<tr>
-				<th scope="row"><span style="color:rgb(0,128,0);">Renfort</span> Trail (Trail nocturne)</th>
-				<td>Lévignac</td>
-				<td>02-02-2019</td>
-			</tr>
-			<tr>
-				<th scope="row">Compétion la Toulousaine Tour</th>
-				<td>Piscine Alex Jany</td>
-				<td>16-02-2019</td>
-			</tr>
-			<tr>
-				<th scope="row">LIDL Star Ligue - F&eacute;nix vs Cesson</th>
-				<td>Palais des sports</td>
-				<td>27-02-2019</td>
-			</tr>
-			<tr>
-				<th scope="row">Compétition de judo</th>
-				<td>Pins- Justaret</td>
-				<td>07-04-2019</td>
-			</tr>
-			<tr>
-				<th scope="row">Carnaval de Labège</th>
-				<td>Labège</td>
-				<td>14-04-2019</td>
-			</tr>
-			<tr>
-				<th scope="row">LIDL Star Ligue - Fénix vs Nantes</th>
-				<td>Palais des sports</td>
-				<td>20-04-2019</td>
-			</tr>
-			<tr>
-				<th scope="row">Fête Locale de Labège</th>
-				<td>Labège</td>
-				<td>18/19-05-2019</td>
-			</tr>
-			<tr>
-				<th scope="row">LIDL Star Ligue - Fénix vs Aix</th>
-				<td>Palais des sports</td>
-				<td>05-06-2019</td>
-			</tr>
-		</tbody>
-	</table>
 </div>
 <hr />
 <div id="Formation_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; background-color: white;">
@@ -104,117 +42,87 @@
 				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
 			</tr>
 			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>26-12-2018</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE2</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>02-01-2019</td>
-			</tr>
-			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>26-01-2019</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>23-02-2019</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>25-02-2019</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE2</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>04-03-2019</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
 				<td>16-03-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
 				<td>17-03-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
 				<td>13-04-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
 				<td>14-04-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
 				<td>20-04-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
 				<td>22-04-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE2</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
 				<td>29-04-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
 				<td>18-05-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
 				<td>19-05-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
 				<td>25-05-2019</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
-				<td>15-06-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
 				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
+				<td style="text-align: center;">Plaisaince du Touch</td>
+				<td>25-05-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
+				<td>15-06-2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
 				<td>22-06-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
-				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
-				<td>Ramonville</td>
+				<td style="margin: auto; text-align: center;"></td>
+				<td style="text-align: center;">Ramonville</td>
 				<td>23-06-2019</td>
 			</tr>
 		</tbody>
