--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -1,5 +1,8 @@
-<p><img src="images/Images_Articles/IMG_3085.JPG" alt="IMG 3085" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px;" /></p>
-<p style="font-size: 11px; text-align: center; color: #3ba4d8;"><a href="https://www.facebook.com/Gbielliphotographie/" style="text-decoration: none; font-size: 10px;">&copy;GuillaumeBielli</a></p>
+<div class="embed-responsive embed-responsive-16by9">
+	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xAhjECuyMOM" frameborder="0" allowfullscreen></iframe>
+</div>
+<!--<p><img src="images/Images_Articles/IMG_3085.JPG" alt="IMG 3085" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px;" /></p>
+<p style="font-size: 11px; text-align: center; color: #3ba4d8;"><a href="https://www.facebook.com/Gbielliphotographie/" style="text-decoration: none; font-size: 10px;">&copy;GuillaumeBielli</a></p>-->
 <hr />
 <div class="btn-group d-flex justify-content-center"><a href="#Autre_section" class="btn btn-warning w-100">Vie du Club</a><a href="#Dps_section" class="btn btn-primary w-100">Dispositif Premier Secours</a> <a href="#Formation_section" class="btn btn-danger w-100">Formations Secourisme</a> <a href="#Sauvetage_section" class="btn btn-success w-100">Sauvetage Sportif</a></div>
 <hr />
@@ -40,18 +43,6 @@
 		<tbody>
 			<tr>
 				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
-				<td style="margin: auto; text-align: center;"></td>
-				<td style="text-align: center;">Ramonville</td>
-				<td>16-03-2019</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
-				<td style="margin: auto; text-align: center;"></td>
-				<td style="text-align: center;">Ramonville</td>
-				<td>17-03-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
