Maj - Site + Calendrier

--- a/Client Web/Information_calendrier.html
+++ b/Client Web/Information_calendrier.html
@@ -41,3 +41,17 @@ Formation CD
     <a href="http://www.ffss31.fr" target="_blank" style="text-decoration: none; color: white;">http://www.ffss31.fr</a>
     <a class="btn btn-light btn-lg text-danger mt-4" href="http://www.ffss31.fr" target="_blank" role="button">Je m'inscris</a>
 </div>
+
+<!----------------------------------------------------------------------------------------------------------------------------------------->
+
+<!-- Petite Description -->
+Formation annulée
+
+<!-- Formation ANNULE -->
+<div class="jumbotron bg-danger text-white mx-1" style="line-height: 1em; padding: 2rem 2rem; margin-bottom: 0;">
+	<h4 class="display-4" style="font-size: 2.5rem;">Formation Formateur</h4>
+	<hr class="my-4" />
+    <p>Formation annulée dû à une annulation de la salle de formation</p>
+    <p>Formation reporté au X</p>
+    <a class="btn btn-light btn-lg text-danger mt-4" href="#" target="_blank" role="button">Je m'inscris à la formation du X</a>
+</div>
