--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -1,5 +1,14 @@
-<div class="embed-responsive embed-responsive-16by9">
-	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xAhjECuyMOM" frameborder="0" allowfullscreen></iframe>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-sm-12 col-lg-6 align-self-center">
+			<div class="embed-responsive embed-responsive-16by9 p-4">
+				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xAhjECuyMOM" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</div>
+		<div class="col-sm-12 col-lg-6">
+			<p><iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fclubdesauvetagetoulousain%2F&amp;tabs=timeline&amp;width=500&amp;height=800&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" width="500" height="500" class="rounded" style="border: none; overflow: hidden; display: block; margin-left: auto; margin-right: auto; margin-bottom: 12px;" frameborder="0" scrolling="no"></iframe></p>
+		</div>
+	</div>
 </div>
 <!--<p><img src="images/Images_Articles/IMG_3085.JPG" alt="IMG 3085" class="img-fluid" style="display: block; margin-left: auto; margin-right: auto; border-radius: 5px;" /></p>
 <p style="font-size: 11px; text-align: center; color: #3ba4d8;"><a href="https://www.facebook.com/Gbielliphotographie/" style="text-decoration: none; font-size: 10px;">&copy;GuillaumeBielli</a></p>-->
@@ -21,13 +30,15 @@
 <hr />
 <div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; background-color: white;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #337ab7;">Postes de Secours :</h3>
-	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenci&eacute;s uniquement - Compte EOS obligatoire) : <a href="https://eos.ffss.fr" style="text-decoration: none; color: #333399; font-weight: bold;">Cliquez-ici</a></p>
+	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenci&eacute;s uniquement - Compte EOS obligatoire) :</p>
+	<p class="center"><a href="https://eos.ffss.fr" class="btn btn-primary btn-lg" role="button" aria-pressed="true">Cliquez-ici</a></p>
 	<p class="center" style="font-size: 12pt; color: #337ab7;">Si vous ne disposez pas de compte, faite une demande par mail : <a href="mailto:cstdps.toulouse@gmail.com" target="_blank" style="text-decoration: none;">cstdps.toulouse@gmail.com</a></p>
 </div>
 <hr />
 <div id="Formation_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; background-color: white;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #d9534f;">Formations Secourisme des prochains mois :</h3>
 	<p style="font-size: 12pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Les inscritions se font en cliquant sur le calendrier ci-contre &agrave; la date et l'&eacute;v&egrave;nement voulu.</p>
+	<p class="center"><a href="http://www.clubdesauvetagetoulousain.org/index.php/calendrier" class="btn btn-danger btn-lg" role="button" aria-pressed="true">Je m'inscrit !</a></p>
 	<p style="font-size: 10pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Toutes nos dates ne sont pas reprises ci-dessous nous vous invitons &agrave; consulter le calendrier ci-contre.</p>
 	<hr />
 	<!-- <span class="label label-warning">En Cours</span> -->
@@ -36,8 +47,8 @@
 			<tr>
 				<th scope="col">Formation</th>
 				<th scope="col">&nbsp;</th>
-				<th scope="col">Lieu</th>
-				<th scope="col">Date</th>
+				<th scope="col" style="text-align: center;">Lieu</th>
+				<th scope="col" style="text-align: center;">Date</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -48,73 +59,73 @@
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
 				<td style="margin: auto; text-align: center;"></td>
 				<td style="text-align: center;">Ramonville</td>
-				<td>13-04-2019</td>
+				<td style="text-align: center;">13-04-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
 				<td style="margin: auto; text-align: center;"></td>
 				<td style="text-align: center;">Ramonville</td>
-				<td>14-04-2019</td>
+				<td style="text-align: center;">14-04-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
 				<td style="margin: auto; text-align: center;"></td>
 				<td style="text-align: center;">Ramonville</td>
-				<td>20-04-2019</td>
+				<td style="text-align: center;">20-04-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
 				<td style="margin: auto; text-align: center;"></td>
 				<td style="text-align: center;">Ramonville</td>
-				<td>22-04-2019</td>
+				<td style="text-align: center;">22-04-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE2</span></th>
 				<td style="margin: auto; text-align: center;"></td>
 				<td style="text-align: center;">Ramonville</td>
-				<td>29-04-2019</td>
+				<td style="text-align: center;">29-04-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
 				<td style="margin: auto; text-align: center;"></td>
 				<td style="text-align: center;">Ramonville</td>
-				<td>18-05-2019</td>
+				<td style="text-align: center;">18-05-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
 				<td style="margin: auto; text-align: center;"></td>
 				<td style="text-align: center;">Ramonville</td>
-				<td>19-05-2019</td>
+				<td style="text-align: center;">19-05-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
 				<td style="margin: auto; text-align: center;"></td>
 				<td style="text-align: center;">Ramonville</td>
-				<td>25-05-2019</td>
+				<td style="text-align: center;">25-05-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
 				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td style="text-align: center;">Plaisaince du Touch</td>
-				<td>25-05-2019</td>
+				<td style="text-align: center;">25-05-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
 				<td style="margin: auto; text-align: center;"></td>
 				<td style="text-align: center;">Ramonville</td>
-				<td>15-06-2019</td>
+				<td style="text-align: center;">15-06-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
 				<td style="margin: auto; text-align: center;"></td>
 				<td style="text-align: center;">Ramonville</td>
-				<td>22-06-2019</td>
+				<td style="text-align: center;">22-06-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
 				<td style="margin: auto; text-align: center;"></td>
 				<td style="text-align: center;">Ramonville</td>
-				<td>23-06-2019</td>
+				<td style="text-align: center;">23-06-2019</td>
 			</tr>
 		</tbody>
 	</table>
@@ -126,6 +137,7 @@
 	<hr/>
 	<p class="center" style="font-size: 12pt; line-height: 20px;">La Toulousaine Tour aura lieux le Samedi 16 Février 2019 à la Piscine Alex Jany (Argoulet), suivez l'evenement <a href="https://www.facebook.com/events/587317188349022/" target="_blank" style="decoration : none;">ICI</a></p>
 </div>
+<!--
 <hr />
 <div class="row mb-3">
 	<div class="col-md-12">
@@ -177,9 +189,4 @@
 			</div>
 		</div>
 	</div>
-</div>
-<hr />
-<h3 style="text-align:center;color:#3b5998;">Notre FACEBOOK</h3>
-<p>
-	<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fclubdesauvetagetoulousain%2F&amp;tabs=timeline&amp;width=500&amp;height=800&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" width="500" height="500" class="rounded" style="border: none; overflow: hidden; display: block; margin-left: auto; margin-right: auto; margin-bottom: 12px;" frameborder="0" scrolling="no"></iframe>
-</p>
+</div>-->
