--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -31,7 +31,7 @@
 <div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; background-color: white;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #337ab7;">Postes de Secours :</h3>
 	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenci&eacute;s uniquement - Compte EOS obligatoire) :</p>
-	<p class="center"><a href="https://eos.ffss.fr" class="btn btn-primary btn-lg" role="button" aria-pressed="true">Cliquez-ici</a></p>
+	<p class="center"><a href="https://eos.ffss.fr" class="btn btn-primary btn-lg" role="button" aria-pressed="true">Je m'engage !</a></p>
 	<p class="center" style="font-size: 12pt; color: #337ab7;">Si vous ne disposez pas de compte, faite une demande par mail : <a href="mailto:cstdps.toulouse@gmail.com" target="_blank" style="text-decoration: none;">cstdps.toulouse@gmail.com</a></p>
 </div>
 <hr />
@@ -54,30 +54,6 @@
 		<tbody>
 			<tr>
 				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
-				<td style="margin: auto; text-align: center;"></td>
-				<td style="text-align: center;">Ramonville</td>
-				<td style="text-align: center;">13-04-2019</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
-				<td style="margin: auto; text-align: center;"></td>
-				<td style="text-align: center;">Ramonville</td>
-				<td style="text-align: center;">14-04-2019</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
-				<td style="margin: auto; text-align: center;"></td>
-				<td style="text-align: center;">Ramonville</td>
-				<td style="text-align: center;">20-04-2019</td>
-			</tr>
-			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
-				<td style="margin: auto; text-align: center;"></td>
-				<td style="text-align: center;">Ramonville</td>
-				<td style="text-align: center;">22-04-2019</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE2</span></th>
